--- a/Copper.co/Copper.co/Base.lproj/Main.storyboard
+++ b/Copper.co/Copper.co/Base.lproj/Main.storyboard
@@ -11,6 +11,9 @@
         <array key="IBMPlexSans-Bold.ttf">
             <string>IBMPlexSans-Bold</string>
         </array>
+        <array key="IBMPlexSans-Light.ttf">
+            <string>IBMPlexSans-Light</string>
+        </array>
         <array key="IBMPlexSans-Regular.ttf">
             <string>IBMPlexSans-Regular</string>
         </array>
@@ -25,19 +28,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Transactions" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZo-er-WgK">
-                                <rect key="frame" x="135" y="415.5" width="144.5" height="31.5"/>
+                                <rect key="frame" x="139" y="421" width="136" height="28"/>
                                 <fontDescription key="fontDescription" name="IBMPlexSans-Bold" family="IBM Plex Sans" pointSize="24"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Click “Download” to view transaction history" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mZ4-ub-dSJ">
-                                <rect key="frame" x="47.5" y="459" width="319" height="21"/>
+                                <rect key="frame" x="48" y="461" width="318" height="19"/>
                                 <fontDescription key="fontDescription" name="IBMPlexSans-Regular" family="IBM Plex Sans" pointSize="16"/>
                                 <color key="textColor" red="0.52549019607843139" green="0.57647058823529407" blue="0.61960784313725492" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="9JL-Kq-2u1">
-                                <rect key="frame" x="149" y="283.5" width="116" height="113"/>
+                                <rect key="frame" x="149" y="289" width="116" height="113"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="113" id="Vzp-HO-AV5"/>
                                     <constraint firstAttribute="width" secondItem="9JL-Kq-2u1" secondAttribute="height" multiplier="116:113" id="lV5-E8-k74"/>
@@ -93,29 +96,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5Fb-bX-6rF">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5Fb-bX-6rF">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="TaU-1A-V7C" customClass="Cell" customModule="Copper_co" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="63" id="TaU-1A-V7C" customClass="Cell" customModule="Copper_co" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="63"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TaU-1A-V7C" id="Y0a-nV-JvA">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="63"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dDQ-dv-xeL">
-                                                    <rect key="frame" x="20" y="11" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="In BTC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dDQ-dv-xeL">
+                                                    <rect key="frame" x="16" y="12" width="46" height="19.5"/>
+                                                    <fontDescription key="fontDescription" name="IBMPlexSans-Regular" family="IBM Plex Sans" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Apr 21, 2021 11:50 am" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZP3-AF-xTJ">
+                                                    <rect key="frame" x="16" y="34" width="136" height="17"/>
+                                                    <fontDescription key="fontDescription" name="IBMPlexSans-Light" family="IBM Plex Sans" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+3.0019 BTC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L8a-rh-kdj">
+                                                    <rect key="frame" x="302" y="12" width="95" height="21"/>
+                                                    <fontDescription key="fontDescription" name="IBMPlexSans-Regular" family="IBM Plex Sans" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Executed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RR3-5y-YJI">
+                                                    <rect key="frame" x="343" y="34" width="54" height="17"/>
+                                                    <fontDescription key="fontDescription" name="IBMPlexSans-Light" family="IBM Plex Sans" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="RR3-5y-YJI" secondAttribute="trailing" constant="17" id="AvQ-d7-WkZ"/>
+                                                <constraint firstItem="ZP3-AF-xTJ" firstAttribute="leading" secondItem="Y0a-nV-JvA" secondAttribute="leading" constant="16" id="DmI-54-ENU"/>
+                                                <constraint firstItem="L8a-rh-kdj" firstAttribute="top" secondItem="Y0a-nV-JvA" secondAttribute="top" constant="12" id="L10-fa-ADM"/>
+                                                <constraint firstAttribute="trailing" secondItem="L8a-rh-kdj" secondAttribute="trailing" constant="17" id="MSr-z9-JD3"/>
+                                                <constraint firstItem="dDQ-dv-xeL" firstAttribute="top" secondItem="Y0a-nV-JvA" secondAttribute="top" constant="12" id="TKy-dw-K8x"/>
+                                                <constraint firstItem="ZP3-AF-xTJ" firstAttribute="top" secondItem="Y0a-nV-JvA" secondAttribute="top" constant="34" id="Tt1-rk-MSF"/>
+                                                <constraint firstItem="dDQ-dv-xeL" firstAttribute="leading" secondItem="Y0a-nV-JvA" secondAttribute="leading" constant="16" id="YnM-7c-mki"/>
+                                                <constraint firstItem="RR3-5y-YJI" firstAttribute="top" secondItem="Y0a-nV-JvA" secondAttribute="top" constant="34" id="mtz-Wd-GlA"/>
+                                                <constraint firstAttribute="bottom" secondItem="ZP3-AF-xTJ" secondAttribute="bottom" constant="12" id="qqo-M5-o5F"/>
+                                                <constraint firstAttribute="bottom" secondItem="RR3-5y-YJI" secondAttribute="bottom" constant="12" id="tUB-hS-CoG"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="amountTextLabel" destination="L8a-rh-kdj" id="5z5-DX-M0d"/>
+                                            <outlet property="createdAtTextLabel" destination="ZP3-AF-xTJ" id="bN4-w2-YSR"/>
                                             <outlet property="currencyTextLabel" destination="dDQ-dv-xeL" id="ufa-H9-DqV"/>
+                                            <outlet property="statusTextLabel" destination="RR3-5y-YJI" id="ahu-l2-Pun"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -123,6 +157,12 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="0UB-Md-BYq"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="5Fb-bX-6rF" secondAttribute="bottom" id="1HA-DR-R0o"/>
+                            <constraint firstItem="5Fb-bX-6rF" firstAttribute="trailing" secondItem="0UB-Md-BYq" secondAttribute="trailing" id="KYg-tM-V0s"/>
+                            <constraint firstItem="5Fb-bX-6rF" firstAttribute="top" secondItem="0UB-Md-BYq" secondAttribute="top" id="cFJ-vb-tCd"/>
+                            <constraint firstItem="5Fb-bX-6rF" firstAttribute="leading" secondItem="0UB-Md-BYq" secondAttribute="leading" id="odE-Qj-aTZ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="LtJ-P7-l6H"/>
                     <connections>
